# HelloEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/include/: color.h  hello_export.h  image.h  render_params.h  renderer.h  tools.h  window.h
Engine/src/: render_params.cpp  renderer.cpp  tools.cpp  window.cpp
Engine/src/vulkan/: autodeleter.h  render_params.cpp  render_params.h  vk_functions.inl  vulkan_functions.cpp  vulkan_functions.h
Engine/src/win32/: window_params.cpp  window_params.h
Engine/src/xcb/: window_params.cpp  window_params.h
Libs/: CMakeLists.txt
Test/: CMakeLists.txt
Test/include/: game.h
Test/src/: game.cpp  main.cpp
